# python-proxychains

./: LICENSE  README.md  pyproject.toml
.github/: pytest.yml
.github/workflows/: pytest.yml
examples/: config.json  requests_adapter.py  requests_decorator.py  requests_global.py
src/python_proxychains/: __init__.py  adapter.py  config.py  config_models.py  proxy.py  router.py
src/python_proxychains/requests/: __init__.py  _machinery.py  decorator.py  global_proxy.py
tests/: sample_config.json  test_config.py  test_config_model.py  test_proxy_strategies.py  test_router.py  test_sample.py
