[project]
name = "python-proxychains"
version = "0.1.0"
description = "Python library for manipulating proxies"
readme = "README.md"
authors = [
    { name = "NinVoido", email = "ninvoido.0@gmail.com" },
    { name = "jtr1k", email = "jtr1k.mail@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pycountry>=26.2.16",
    "pydantic>=2.13.3",
    "pydantic-extra-types>=2.11.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 88
